[gd_scene load_steps=20 format=3 uid="uid://cw7tfyaruxcvn"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_pijme"]
[ext_resource type="PackedScene" uid="uid://byl1jy6dt1h6d" path="res://Scenes/background.tscn" id="2_x4wqx"]
[ext_resource type="PackedScene" uid="uid://crfog1h44dkus" path="res://Scenes/Dumpling.tscn" id="2_xhska"]
[ext_resource type="PackedScene" uid="uid://dpgnh4ttdqihh" path="res://Scenes/congratulations.tscn" id="3_ogpvm"]
[ext_resource type="PackedScene" uid="uid://dcv52w5scpn51" path="res://Scenes/ui.tscn" id="5_3kwrd"]
[ext_resource type="PackedScene" uid="uid://cvn76pvwhvlvn" path="res://Scenes/game_over.tscn" id="5_q386b"]
[ext_resource type="Script" path="res://Scripts/coin_spawn.gd" id="6_qd8a1"]
[ext_resource type="PackedScene" uid="uid://5r1mm1wm450d" path="res://Scenes/killzone.tscn" id="8_585mj"]
[ext_resource type="Script" path="res://Scripts/characters/enemy_spawn.gd" id="9_dfbxq"]
[ext_resource type="FontFile" uid="uid://dl7mg7iksf6yp" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="10_jkcf1"]
[ext_resource type="PackedScene" uid="uid://d3bgjbkd6jx3g" path="res://Scenes/pause_menu.tscn" id="10_udk2c"]
[ext_resource type="Script" path="res://Scripts/hint.gd" id="11_a50k8"]

[sub_resource type="Curve2D" id="Curve2D_ndj1l"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1152, 72, 0, 0, 0, 0, 1368, 120, 0, 0, 0, 0, 1216, 208, 0, 0, 0, 0, 1365, 275, 0, 0, 0, 0, 1216, 352, 0, 0, 0, 0, 1360, 393, 0, 0, 0, 0, 1148, 509, 0, 0, 0, 0, 1352, 552)
}
point_count = 8

[sub_resource type="Curve2D" id="Curve2D_fjmp1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1289, -339, 0, 0, 0, 0, 1284, -257, 0, 0, 0, 0, 1286, -158, 0, 0, 0, 0, 1278, -42, 0, 0, 0, 0, 1272, 66, 0, 0, 0, 0, 1278, 156, 0, 0, 0, 0, 1401, 24, 0, 0, 0, 0, 1401, -88, 0, 0, 0, 0, 1401, -208, 0, 0, 0, 0, 1401, -304, 0, 0, 0, 0, 1401, -424)
}
point_count = 11

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_pfwkl"]

[sub_resource type="Animation" id="Animation_ilwc5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Congratulations:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_twuyp"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.21019, 0.307593, 0.566406, 1)]
}

[sub_resource type="Animation" id="Animation_sv72e"]
resource_name = "quit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yxb26"]
_data = {
"RESET": SubResource("Animation_ilwc5"),
"fade": SubResource("Animation_twuyp"),
"quit": SubResource("Animation_sv72e")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_pijme")

[node name="Background" parent="." instance=ExtResource("2_x4wqx")]
position = Vector2(73, -17)
scale = Vector2(0.833892, 0.833892)

[node name="Congratulations" parent="." instance=ExtResource("3_ogpvm")]
visible = false
top_level = true
z_index = 1
scale = Vector2(0.95, 0.95)

[node name="Timer" type="Timer" parent="Congratulations"]
wait_time = 3.5
one_shot = true

[node name="UI" parent="." instance=ExtResource("5_3kwrd")]

[node name="PauseMenu" parent="." instance=ExtResource("10_udk2c")]
visible = false
top_level = true
offset_left = 435.0
offset_top = 222.0
offset_right = 435.0
offset_bottom = 222.0
scale = Vector2(2.7044, 2.7044)

[node name="GameOver" parent="." instance=ExtResource("5_q386b")]
visible = false
top_level = true
offset_left = 471.0
offset_top = 212.0
offset_right = 471.0
offset_bottom = 212.0

[node name="Dumpling" parent="." instance=ExtResource("2_xhska")]
position = Vector2(56, -224)

[node name="Coins" type="Node2D" parent="."]
script = ExtResource("6_qd8a1")

[node name="Coin_Spawn" type="Path2D" parent="Coins"]
position = Vector2(24, 0)
curve = SubResource("Curve2D_ndj1l")

[node name="coin_spawn_path" type="PathFollow2D" parent="Coins/Coin_Spawn"]
unique_name_in_owner = true
position = Vector2(1152, 72)
rotation = 0.218669

[node name="coin_timer" type="Timer" parent="Coins/Coin_Spawn"]
unique_name_in_owner = true
wait_time = 0.2
autostart = true

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource("9_dfbxq")

[node name="Sugar_Spawn" type="Path2D" parent="Enemies"]
position = Vector2(-121, -240)
curve = SubResource("Curve2D_fjmp1")

[node name="sugar_spawn_path" type="PathFollow2D" parent="Enemies/Sugar_Spawn"]
unique_name_in_owner = true
position = Vector2(1289, -339)
rotation = 1.6317

[node name="sugar_spawn_timer" type="Timer" parent="Enemies/Sugar_Spawn"]
unique_name_in_owner = true
wait_time = 12.0
autostart = true

[node name="Bee_Spawn" type="Path2D" parent="Enemies"]
position = Vector2(-59, 212)
curve = SubResource("Curve2D_fjmp1")

[node name="bee_spawn_path" type="PathFollow2D" parent="Enemies/Bee_Spawn"]
unique_name_in_owner = true
position = Vector2(1289, -339)
rotation = 1.6317

[node name="bee_spawn_timer" type="Timer" parent="Enemies/Bee_Spawn"]
unique_name_in_owner = true
wait_time = 8.0
autostart = true

[node name="Killzone" parent="." instance=ExtResource("8_585mj")]
position = Vector2(0, 72)

[node name="Collision" type="CollisionShape2D" parent="Killzone"]
position = Vector2(294, 728)
scale = Vector2(3.21611, 3.21611)
shape = SubResource("WorldBoundaryShape2D_pfwkl")

[node name="Hint" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 609.0
offset_top = 16.0
offset_right = 1254.0
offset_bottom = 137.0
grow_vertical = 0
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 14
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("10_jkcf1")
theme_override_font_sizes/font_size = 30
text = "Press
 \"Backspace\" or \"Start\" 
to view Controls"
horizontal_alignment = 1
script = ExtResource("11_a50k8")
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="Hint"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
top_level = true
z_index = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -127.0
offset_right = -176.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.39904, 1.39904)
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yxb26")
}
speed_scale = 2.0

[connection signal="won" from="Background" to="." method="_on_background_won"]
[connection signal="timeout" from="Congratulations/Timer" to="." method="_on_timer_timeout"]
[connection signal="health_depleted" from="Dumpling" to="." method="_on_dumpling_health_depleted"]
[connection signal="timeout" from="Coins/Coin_Spawn/coin_timer" to="Coins" method="_on_coin_timer_timeout"]
[connection signal="timeout" from="Enemies/Sugar_Spawn/sugar_spawn_timer" to="Enemies" method="_on_sugar_spawn_timer_timeout"]
[connection signal="timeout" from="Enemies/Bee_Spawn/bee_spawn_timer" to="Enemies" method="_on_bee_spawn_timer_timeout"]
[connection signal="dead" from="Killzone" to="." method="_on_killzone_dead"]
[connection signal="timeout" from="Hint/Timer" to="Hint" method="_on_timer_timeout"]
